--- a/config/sync/core.entity_view_display.node.page.teaser.yml
+++ b/config/sync/core.entity_view_display.node.page.teaser.yml
@@ -6,7 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.page.body
     - field.field.node.page.field_banner
-    - field.field.node.page.field_metatag
+    - field.field.node.page.field_paragraphs
     - field.field.node.page.field_vih_course_heading
     - field.field.node.page.field_vih_course_subheading
     - field.field.node.page.panelizer
@@ -39,6 +39,7 @@ content:
 hidden:
   field_banner: true
   field_metatag: true
+  field_paragraphs: true
   field_vih_course_heading: true
   field_vih_course_subheading: true
   langcode: true
