--- a/config/sync/webform.webform_options.creditcard_codes.yml
+++ b/config/sync/webform.webform_options.creditcard_codes.yml
@@ -10,4 +10,5 @@ _core:
 id: creditcard_codes
 label: 'Credit card codes'
 category: Betaling
+likert: false
 options: "VI: 'Visa'\nMC: 'Mastercard'\nAE: 'American Express'\nDC: 'Discover'\n"
