--- a/config/sync/webform.webform_options.days.yml
+++ b/config/sync/webform.webform_options.days.yml
@@ -10,4 +10,5 @@ _core:
 id: days
 label: Dage
 category: 'Dato og tid'
+likert: false
 options: "Sunday: Sunday\nMonday: Monday\nTuesday: Tuesday\nWednesday: Wednesday\nThursday: Thursday\nFriday: Friday\nSaturday: Saturday\n"
