--- a/config/sync/webform.webform_options.gender.yml
+++ b/config/sync/webform.webform_options.gender.yml
@@ -10,4 +10,5 @@ _core:
 id: gender
 label: Køn
 category: Demographic
+likert: false
 options: "Male: Male\nFemale: Female\nTransgender: Transgender\n"
