--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -3,15 +3,15 @@ langcode: da
 status: true
 dependencies:
   config:
-    - entity_browser.browser.media_browser
+    - entity_browser.browser.image_browser
     - field.field.node.event.body
-    - field.field.node.event.field_banner
     - field.field.node.event.field_event_end_date
     - field.field.node.event.field_event_price
     - field.field.node.event.field_event_start_date
     - field.field.node.event.field_image
     - field.field.node.event.field_metatag
     - field.field.node.event.field_paragraphs
+    - field.field.node.event.field_vih_banner
     - field.field.node.event.field_vih_cource_contact_person
     - field.field.node.event.field_vih_course_heading
     - field.field.node.event.field_vih_course_subheading
@@ -35,6 +35,7 @@ third_party_settings:
       children:
         - title
         - field_banner
+        - field_vih_banner
       parent_name: ''
       weight: 0
       format_type: tab
@@ -125,19 +126,6 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
-  field_banner:
-    type: entity_browser_file
-    weight: 2
-    settings:
-      entity_browser: image_browser
-      field_widget_remove: true
-      open: true
-      selection_mode: selection_append
-      preview_image_style: thumbnail
-      field_widget_edit: true
-      view_mode: default
-    region: content
-    third_party_settings: {  }
   field_event_end_date:
     weight: 5
     settings: {  }
@@ -190,6 +178,19 @@ content:
     third_party_settings: {  }
     type: paragraphs
     region: content
+  field_vih_banner:
+    type: entity_browser_file
+    weight: 3
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
+    region: content
+    third_party_settings: {  }
   field_vih_cource_contact_person:
     weight: 8
     settings:
