--- a/config/sync/core.entity_view_display.node.page.teaser.yml
+++ b/config/sync/core.entity_view_display.node.page.teaser.yml
@@ -5,8 +5,9 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.page.body
-    - field.field.node.page.field_banner
+    - field.field.node.page.field_metatag
     - field.field.node.page.field_paragraphs
+    - field.field.node.page.field_vih_banner
     - field.field.node.page.field_vih_course_heading
     - field.field.node.page.field_vih_course_subheading
     - field.field.node.page.panelizer
@@ -37,9 +38,9 @@ content:
     weight: -20
     region: content
 hidden:
-  field_banner: true
   field_metatag: true
   field_paragraphs: true
+  field_vih_banner: true
   field_vih_course_heading: true
   field_vih_course_subheading: true
   langcode: true
