--- a/config/sync/core.entity_view_display.node.vih_short_course.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_short_course.default.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - field.field.node.vih_short_course.body
-    - field.field.node.vih_short_course.field_banner
     - field.field.node.vih_short_course.field_metatag
     - field.field.node.vih_short_course.field_paragraphs
+    - field.field.node.vih_short_course.field_vih_banner
     - field.field.node.vih_short_course.field_vih_course_heading
     - field.field.node.vih_short_course.field_vih_course_subheading
     - field.field.node.vih_short_course.field_vih_cs_contact_person
@@ -47,17 +47,8 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
-  field_banner:
-    weight: 14
-    label: hidden
-    settings:
-      image_style: banner_small
-      image_link: ''
-    third_party_settings: {  }
-    type: image
-    region: content
   field_metatag:
-    weight: 15
+    weight: 16
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -71,6 +62,15 @@ content:
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+    region: content
+  field_vih_banner:
+    weight: 15
+    label: hidden
+    settings:
+      image_style: banner_small
+      image_link: ''
+    third_party_settings: {  }
+    type: image
     region: content
   field_vih_course_heading:
     weight: 10
