--- a/config/sync/core.entity_form_display.node.news.default.yml
+++ b/config/sync/core.entity_form_display.node.news.default.yml
@@ -5,11 +5,11 @@ dependencies:
   config:
     - entity_browser.browser.image_browser
     - field.field.node.news.body
-    - field.field.node.news.field_banner
     - field.field.node.news.field_image
     - field.field.node.news.field_metatag
     - field.field.node.news.field_news_tags
     - field.field.node.news.field_paragraphs
+    - field.field.node.news.field_vih_banner
     - field.field.node.news.scheduled_update
     - node.type.news
   module:
@@ -27,6 +27,7 @@ third_party_settings:
       children:
         - title
         - field_banner
+        - field_vih_banner
       parent_name: ''
       weight: 0
       format_type: tab
@@ -97,19 +98,6 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
-  field_banner:
-    type: entity_browser_file
-    weight: 16
-    settings:
-      entity_browser: image_browser
-      field_widget_edit: true
-      field_widget_remove: true
-      view_mode: default
-      preview_image_style: thumbnail
-      open: true
-      selection_mode: selection_append
-    region: content
-    third_party_settings: {  }
   field_image:
     type: entity_browser_file
     weight: 18
@@ -152,6 +140,19 @@ content:
     third_party_settings: {  }
     type: paragraphs
     region: content
+  field_vih_banner:
+    type: entity_browser_file
+    weight: 17
+    settings:
+      entity_browser: image_browser
+      field_widget_remove: true
+      open: true
+      selection_mode: selection_append
+      preview_image_style: thumbnail
+      field_widget_edit: true
+      view_mode: default
+    region: content
+    third_party_settings: {  }
   langcode:
     type: language_select
     weight: 27
