--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -4,11 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.node.news.body
-    - field.field.node.news.field_banner
     - field.field.node.news.field_image
     - field.field.node.news.field_metatag
     - field.field.node.news.field_news_tags
     - field.field.node.news.field_paragraphs
+    - field.field.node.news.field_vih_banner
     - field.field.node.news.scheduled_update
     - image.style.banner_small
     - node.type.news
@@ -33,21 +33,12 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 2
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     region: content
-  field_banner:
-    weight: 6
-    label: hidden
-    settings:
-      image_style: banner_small
-      image_link: ''
-    third_party_settings: {  }
-    type: image
-    region: content
   field_image:
-    weight: 3
+    weight: 2
     label: hidden
     settings:
       image_style: banner_small
@@ -63,7 +54,7 @@ content:
     type: metatag_empty_formatter
     region: content
   field_news_tags:
-    weight: 4
+    weight: 3
     label: hidden
     settings:
       link: true
@@ -71,7 +62,7 @@ content:
     type: entity_reference_label
     region: content
   field_paragraphs:
-    weight: 5
+    weight: 4
     label: hidden
     settings:
       view_mode: default
@@ -79,8 +70,17 @@ content:
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
     region: content
+  field_vih_banner:
+    weight: 6
+    label: hidden
+    settings:
+      image_style: banner_small
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
   links:
-    weight: 1
+    weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
