--- a/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - field.field.node.vih_long_cource.body
-    - field.field.node.vih_long_cource.field_banner
     - field.field.node.vih_long_cource.field_metatag
     - field.field.node.vih_long_cource.field_paragraphs
+    - field.field.node.vih_long_cource.field_vih_banner
     - field.field.node.vih_long_cource.field_vih_cource_contact_person
     - field.field.node.vih_long_cource.field_vih_course_heading
     - field.field.node.vih_long_cource.field_vih_course_image
@@ -240,17 +240,8 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
-  field_banner:
-    weight: 13
-    label: hidden
-    settings:
-      image_style: banner_small
-      image_link: ''
-    third_party_settings: {  }
-    type: image
-    region: content
   field_metatag:
-    weight: 14
+    weight: 15
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -264,6 +255,15 @@ content:
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+    region: content
+  field_vih_banner:
+    weight: 14
+    label: hidden
+    settings:
+      image_style: banner_small
+      image_link: ''
+    third_party_settings: {  }
+    type: image
     region: content
   field_vih_cource_contact_person:
     weight: 7
