VI-179 vih_class field_vih_banner settings

--- a/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
@@ -4,11 +4,11 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.taxonomy_term.vih_class.field_banner
     - field.field.taxonomy_term.vih_class.field_heading
     - field.field.taxonomy_term.vih_class.field_metatag
     - field.field.taxonomy_term.vih_class.field_paragraphs
     - field.field.taxonomy_term.vih_class.field_subheading
+    - field.field.taxonomy_term.vih_class.field_vih_banner
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
     - field.field.taxonomy_term.vih_class.field_vih_class_color
     - field.field.taxonomy_term.vih_class.field_vih_class_image
@@ -43,6 +43,7 @@ third_party_settings:
     group_banner:
       children:
         - field_banner
+        - field_vih_banner
       parent_name: ''
       weight: 2
       format_type: tab
@@ -105,19 +106,6 @@ content:
       rows: 5
     third_party_settings: {  }
     region: content
-  field_banner:
-    type: entity_browser_file
-    weight: 14
-    settings:
-      entity_browser: image_browser
-      field_widget_remove: true
-      selection_mode: selection_append
-      preview_image_style: thumbnail
-      field_widget_edit: true
-      open: false
-      view_mode: default
-    region: content
-    third_party_settings: {  }
   field_heading:
     weight: 15
     settings:
@@ -154,6 +142,19 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_vih_banner:
+    type: entity_browser_file
+    weight: 15
+    settings:
+      entity_browser: image_browser
+      field_widget_remove: true
+      open: true
+      selection_mode: selection_append
+      preview_image_style: thumbnail
+      field_widget_edit: true
+      view_mode: default
+    region: content
+    third_party_settings: {  }
   field_vih_class_class_packages:
     weight: 10
     settings:
