--- a/config/sync/core.entity_view_display.user.user.teaser.yml
+++ b/config/sync/core.entity_view_display.user.user.teaser.yml
@@ -4,14 +4,15 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.user.teaser
-    - field.field.user.user.field_banner
     - field.field.user.user.field_e_mail
     - field.field.user.user.field_job_title
     - field.field.user.user.field_paragraphs
     - field.field.user.user.field_user_birthday
+    - field.field.user.user.field_user_kvalifikationer
     - field.field.user.user.field_user_name_first
     - field.field.user.user.field_user_name_last
     - field.field.user.user.field_user_type_id
+    - field.field.user.user.field_vih_banner
     - field.field.user.user.field_vih_user_descr
     - field.field.user.user.field_vih_user_phone
     - field.field.user.user.field_vih_user_photo
@@ -81,11 +82,11 @@ content:
       image_link: ''
     third_party_settings: {  }
 hidden:
-  field_banner: true
   field_paragraphs: true
   field_user_birthday: true
   field_user_kvalifikationer: true
   field_user_type_id: true
+  field_vih_banner: true
   field_vih_user_descr: true
   field_vih_user_title: true
   langcode: true
