--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.default.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.default.yml
@@ -3,11 +3,11 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.taxonomy_term.vih_class.field_banner
     - field.field.taxonomy_term.vih_class.field_heading
     - field.field.taxonomy_term.vih_class.field_metatag
     - field.field.taxonomy_term.vih_class.field_paragraphs
     - field.field.taxonomy_term.vih_class.field_subheading
+    - field.field.taxonomy_term.vih_class.field_vih_banner
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
     - field.field.taxonomy_term.vih_class.field_vih_class_color
     - field.field.taxonomy_term.vih_class.field_vih_class_image
@@ -35,44 +35,11 @@ content:
   description:
     label: hidden
     type: text_default
-    weight: 3
+    weight: 4
     settings: {  }
     third_party_settings: {  }
-    region: content
-  field_banner:
-    weight: 0
-    label: hidden
-    settings:
-      image_style: banner_small
-      image_link: ''
-    third_party_settings: {  }
-    type: image
     region: content
   field_heading:
-    weight: 1
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_metatag:
-    weight: 8
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: metatag_empty_formatter
-    region: content
-  field_paragraphs:
-    type: entity_reference_revisions_entity_view
-    weight: 7
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    region: content
-  field_subheading:
     weight: 2
     label: hidden
     settings:
@@ -80,9 +47,42 @@ content:
     third_party_settings: {  }
     type: string
     region: content
+  field_metatag:
+    weight: 9
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
+    region: content
+  field_paragraphs:
+    type: entity_reference_revisions_entity_view
+    weight: 8
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
+  field_subheading:
+    weight: 3
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_vih_banner:
+    weight: 1
+    label: hidden
+    settings:
+      image_style: banner_small
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
   field_vih_class_class_packages:
     type: entity_reference_entity_view
-    weight: 6
+    weight: 7
     region: content
     label: hidden
     settings:
@@ -90,7 +90,7 @@ content:
       link: false
     third_party_settings: {  }
   field_vih_class_material_price:
-    weight: 5
+    weight: 6
     label: above
     settings:
       thousand_separator: ''
@@ -101,7 +101,7 @@ content:
     type: number_decimal
     region: content
   field_vih_class_price_addition:
-    weight: 4
+    weight: 5
     label: above
     settings:
       thousand_separator: ''
