--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.list_advanced.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.list_advanced.yml
@@ -4,11 +4,11 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.list_advanced
-    - field.field.taxonomy_term.vih_class.field_banner
     - field.field.taxonomy_term.vih_class.field_heading
     - field.field.taxonomy_term.vih_class.field_metatag
     - field.field.taxonomy_term.vih_class.field_paragraphs
     - field.field.taxonomy_term.vih_class.field_subheading
+    - field.field.taxonomy_term.vih_class.field_vih_banner
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
     - field.field.taxonomy_term.vih_class.field_vih_class_color
     - field.field.taxonomy_term.vih_class.field_vih_class_image
@@ -57,11 +57,11 @@ content:
       image_link: ''
     third_party_settings: {  }
 hidden:
-  field_banner: true
   field_heading: true
   field_metatag: true
   field_paragraphs: true
   field_subheading: true
+  field_vih_banner: true
   field_vih_class_class_packages: true
   field_vih_class_material_price: true
   field_vih_class_price_addition: true
