--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.radio_selection.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.radio_selection.yml
@@ -4,10 +4,11 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.radio_selection
-    - field.field.taxonomy_term.vih_class.field_banner
     - field.field.taxonomy_term.vih_class.field_heading
+    - field.field.taxonomy_term.vih_class.field_metatag
     - field.field.taxonomy_term.vih_class.field_paragraphs
     - field.field.taxonomy_term.vih_class.field_subheading
+    - field.field.taxonomy_term.vih_class.field_vih_banner
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
     - field.field.taxonomy_term.vih_class.field_vih_class_color
     - field.field.taxonomy_term.vih_class.field_vih_class_image
@@ -48,11 +49,11 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
-  field_banner: true
   field_heading: true
   field_metatag: true
   field_paragraphs: true
   field_subheading: true
+  field_vih_banner: true
   field_vih_class_class_packages: true
   field_vih_class_color: true
   field_vih_class_material_price: true
