--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.vih_class_table_teaser.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.vih_class_table_teaser.yml
@@ -4,10 +4,11 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.vih_class_table_teaser
-    - field.field.taxonomy_term.vih_class.field_banner
     - field.field.taxonomy_term.vih_class.field_heading
+    - field.field.taxonomy_term.vih_class.field_metatag
     - field.field.taxonomy_term.vih_class.field_paragraphs
     - field.field.taxonomy_term.vih_class.field_subheading
+    - field.field.taxonomy_term.vih_class.field_vih_banner
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
     - field.field.taxonomy_term.vih_class.field_vih_class_color
     - field.field.taxonomy_term.vih_class.field_vih_class_image
@@ -41,11 +42,11 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
-  field_banner: true
   field_heading: true
   field_metatag: true
   field_paragraphs: true
   field_subheading: true
+  field_vih_banner: true
   field_vih_class_class_packages: true
   field_vih_class_color: true
   field_vih_class_material_price: true
