VI-179 vih_class_package field_vih_banner settings

--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.vih_class_package_accordion.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.vih_class_package_accordion.yml
@@ -4,11 +4,12 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.vih_class_package_accordion
-    - field.field.taxonomy_term.vih_class_package.field_banner
     - field.field.taxonomy_term.vih_class_package.field_heading
     - field.field.taxonomy_term.vih_class_package.field_link_taxo
+    - field.field.taxonomy_term.vih_class_package.field_metatag
     - field.field.taxonomy_term.vih_class_package.field_paragraphs
     - field.field.taxonomy_term.vih_class_package.field_subheading
+    - field.field.taxonomy_term.vih_class_package.field_vih_banner
     - field.field.taxonomy_term.vih_class_package.field_vih_class_package_color
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_image
     - image.style.vih_class_package_accordion
@@ -39,11 +40,11 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
-  field_banner: true
   field_heading: true
   field_link_taxo: true
   field_metatag: true
   field_paragraphs: true
   field_subheading: true
+  field_vih_banner: true
   field_vih_class_package_color: true
   langcode: true
