--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.default.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.default.yml
@@ -3,12 +3,12 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.taxonomy_term.vih_class_package.field_banner
     - field.field.taxonomy_term.vih_class_package.field_heading
     - field.field.taxonomy_term.vih_class_package.field_link_taxo
     - field.field.taxonomy_term.vih_class_package.field_metatag
     - field.field.taxonomy_term.vih_class_package.field_paragraphs
     - field.field.taxonomy_term.vih_class_package.field_subheading
+    - field.field.taxonomy_term.vih_class_package.field_vih_banner
     - field.field.taxonomy_term.vih_class_package.field_vih_class_package_color
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_image
     - image.style.banner_small
@@ -33,22 +33,13 @@ mode: default
 content:
   description:
     type: text_default
-    weight: 3
+    weight: 4
     region: content
     label: hidden
     settings: {  }
     third_party_settings: {  }
-  field_banner:
-    weight: 0
-    label: hidden
-    settings:
-      image_style: banner_small
-      image_link: ''
-    third_party_settings: {  }
-    type: image
-    region: content
   field_heading:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
@@ -56,7 +47,7 @@ content:
     type: string
     region: content
   field_link_taxo:
-    weight: 4
+    weight: 5
     label: hidden
     settings:
       trim_length: 80
@@ -68,14 +59,14 @@ content:
     type: link
     region: content
   field_metatag:
-    weight: 6
+    weight: 7
     label: above
     settings: {  }
     third_party_settings: {  }
     type: metatag_empty_formatter
     region: content
   field_paragraphs:
-    weight: 5
+    weight: 6
     label: hidden
     settings:
       view_mode: default
@@ -84,12 +75,21 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   field_subheading:
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
+  field_vih_banner:
+    weight: 1
+    label: hidden
+    settings:
+      image_style: banner_small
+      image_link: ''
+    third_party_settings: {  }
+    type: image
     region: content
 hidden:
   field_vih_class_package_color: true
