--- a/config/sync/core.entity_form_display.block_content.notify.default.yml
+++ b/config/sync/core.entity_form_display.block_content.notify.default.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - block_content.type.notify
-    - field.field.block_content.notify.field_heading
     - field.field.block_content.notify.field_highlighted_text
     - field.field.block_content.notify.field_link
+    - field.field.block_content.notify.field_vih_heading
   module:
     - link
     - workbench_moderation
@@ -15,16 +15,8 @@ targetEntityType: block_content
 bundle: notify
 mode: default
 content:
-  field_heading:
-    weight: 0
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
   field_highlighted_text:
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -32,16 +24,24 @@ content:
     type: string_textfield
     region: content
   field_link:
-    weight: 2
+    weight: 3
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
     region: content
+  field_vih_heading:
+    type: string_textfield
+    weight: 1
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   info:
     type: string_textfield
-    weight: 3
+    weight: 4
     region: content
     settings:
       size: 60
@@ -49,7 +49,7 @@ content:
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 4
+    weight: 5
     region: content
     settings:
       include_locked: true
