--- a/config/sync/core.entity_view_display.block_content.notify.default.yml
+++ b/config/sync/core.entity_view_display.block_content.notify.default.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - block_content.type.notify
-    - field.field.block_content.notify.field_heading
     - field.field.block_content.notify.field_highlighted_text
     - field.field.block_content.notify.field_link
+    - field.field.block_content.notify.field_vih_heading
   module:
     - link
 id: block_content.notify.default
@@ -14,16 +14,8 @@ targetEntityType: block_content
 bundle: notify
 mode: default
 content:
-  field_heading:
-    weight: 2
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_highlighted_text:
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       link_to_entity: false
@@ -42,5 +34,13 @@ content:
     third_party_settings: {  }
     type: link
     region: content
+  field_vih_heading:
+    type: string
+    weight: 2
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
 hidden:
   langcode: true
