--- a/config/sync/core.entity_form_display.paragraph.1_column_action_centered.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.1_column_action_centered.default.yml
@@ -7,8 +7,8 @@ dependencies:
     - field.field.paragraph.1_column_action_centered.field_background_color
     - field.field.paragraph.1_column_action_centered.field_background_image
     - field.field.paragraph.1_column_action_centered.field_description
-    - field.field.paragraph.1_column_action_centered.field_heading
     - field.field.paragraph.1_column_action_centered.field_link
+    - field.field.paragraph.1_column_action_centered.field_vih_heading
     - paragraphs.paragraphs_type.1_column_action_centered
   module:
     - entity_browser
@@ -23,7 +23,7 @@ third_party_settings:
         - field_background_image
         - field_background_color
       parent_name: ''
-      weight: 4
+      weight: 5
       format_type: tab
       format_settings:
         id: ''
@@ -58,32 +58,32 @@ content:
     third_party_settings: {  }
     region: content
   field_description:
-    weight: 2
+    weight: 3
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
     region: content
-  field_heading:
-    weight: 0
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
   field_link:
-    weight: 1
+    weight: 2
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
     region: content
+  field_vih_heading:
+    type: string_textfield
+    weight: 1
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 3
+    weight: 4
     region: content
     settings:
       display_label: true
