--- a/config/sync/core.entity_view_display.paragraph.1_column_action_centered.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.1_column_action_centered.default.yml
@@ -6,8 +6,8 @@ dependencies:
     - field.field.paragraph.1_column_action_centered.field_background_color
     - field.field.paragraph.1_column_action_centered.field_background_image
     - field.field.paragraph.1_column_action_centered.field_description
-    - field.field.paragraph.1_column_action_centered.field_heading
     - field.field.paragraph.1_column_action_centered.field_link
+    - field.field.paragraph.1_column_action_centered.field_vih_heading
     - paragraphs.paragraphs_type.1_column_action_centered
   module:
     - link
@@ -18,22 +18,14 @@ bundle: 1_column_action_centered
 mode: default
 content:
   field_description:
-    weight: 1
+    weight: 2
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
-  field_heading:
-    weight: 0
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_link:
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       trim_length: null
@@ -44,6 +36,14 @@ content:
     third_party_settings: {  }
     type: link
     region: content
+  field_vih_heading:
+    type: string
+    weight: 1
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
 hidden:
   created: true
   field_background_color: true
