--- a/config/sync/core.entity_view_display.paragraph.article.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.article.default.yml
@@ -6,8 +6,8 @@ dependencies:
     - field.field.paragraph.article.field_background_color
     - field.field.paragraph.article.field_background_image
     - field.field.paragraph.article.field_body
-    - field.field.paragraph.article.field_heading
     - field.field.paragraph.article.field_link
+    - field.field.paragraph.article.field_vih_heading
     - paragraphs.paragraphs_type.article
   module:
     - link
@@ -18,22 +18,14 @@ bundle: article
 mode: default
 content:
   field_body:
-    weight: 1
+    weight: 2
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
-  field_heading:
-    weight: 0
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_link:
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       trim_length: null
@@ -43,6 +35,14 @@ content:
       target: '0'
     third_party_settings: {  }
     type: link
+    region: content
+  field_vih_heading:
+    weight: 1
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
 hidden:
   field_background_color: true
